
Detailed list of changes to specific OpenMS classes:
- Renamed and moved classes
  - Renamed MSMetaDataExplorer to MetaDataBrowser
  - Renamed ProcessingMethod to DataProcessing
- Removed classes
  - DPeakArray (moved the functionality to the classes that inherited from it)
  - IDSpectrumMapper (replaced by IDMapper)
  - IDFeatureMapper (replaced by IDMapper)
- New classes
  - DATASTRUCTURES/IntList
  - DATASTRUCTURES/StringList
  - ANALYSIS/ID/IDMapper
- Changes to classes
	- DataProcessing: Now contains Software and can handle multiple processing actions.
	- Software: Only contains name and version now.
	- SourceFile: Added MetaInfointerface and checksum type
	- ContactPerson: Added URL and address
  - Instrument:
    - Can contain multiple detectors and multiple ion sources now
    - Added Software
    - Added ion optics type
  - AcquisitionInfo: Added MetaInfoInterface
  - ExperimentalSettings
    - Now contains multiple SourceFiles and DataProcessings
    - ExperimentType was removed
  - SpectrumSettings
    - added nativeID (from acquisition software)
    - The nativeID is now correctly handled for mzData, mzXML and mzML files
  - DSpectrum
    - The peaks are no longer stored in a container member, but DSpectrum is derived 
      from std::vector<PeakType>.
    - The container type is no longer a template argument. Peak type and allocator type
      are the new template arguments.
  - LabeledPairFinder: Added automated RT parameter estimation.
  - GaussFitter: removed several unneeded methods.
  - GammaDistributionFitter: removed several unneeded methods.
  - Param:
    - Added a new remove(key) method, that removed only exact matches.
      The old remove() method was renamed to removeAll(prefix)
    - replaced 'advanced' flag by a generic tagging mechanism
  - File: find(...) now throws an exception, of the file is not found.
  - DPeak and DRichPeak are metafunctions now, e.g. DPeak<1>::Type is a typedef for Peak1D.